Fix report opening issue - HTML files now open properly in browser instead of showing raw source